Update Technical Analysis - Divergence.ipynb

--- a/Technical Analysis - Divergence.ipynb
+++ b/Technical Analysis - Divergence.ipynb
@@ -43,7 +43,7 @@
     "import math\n",
     "import statsmodels\n",
     "from pandas import Series\n",
-    "import random\n",
+    "import random\n"
    ]
   },
   {
